<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:background="@android:color/transparent"
                    app:tint="@color/blue_auth" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/title_add_driver"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/label_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/btn_back"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/please_input_your_driver_data"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/title_fullname"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/please_input_your_driver_fullname"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="Email"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/hint_input_your_email"
                android:text="firriezky@gmail.com"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="Phone"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_regular"
                android:hint="Misal 628XXX"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="Kata Sandi"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="Masukkan Kata Sandi"
                android:inputType="textPassword"
                android:text="password"
                android:textColor="@color/black"
                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/btn_back"
                android:fontFamily="@font/poppins_light"
                android:text="Dengan mendaftar, anda menyetujui syarat dan ketentuan penggunaan aplikasi Musko"
                android:textColor="@color/black"
                android:textSize="11sp" />



        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/gray70"
        android:contentDescription="Button Add Report"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_anim"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="50dp"
        android:visibility="gone"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading_circle_rgb.json"
        app:lottie_loop="true" />


</androidx.constraintlayout.widget.ConstraintLayout>