...
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/title_food_category_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/form_hint_restaurant_category"
                android:textColor="@color/black"
...
                android:fontFamily="@font/poppins_regular"
                android:text="@string/message_add_food_category"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_change"
                app:cornerRadius="@dimen/dimen_20dp"
                />

...
