...
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="Terjemah"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_menu_convo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

...
