...
                            android:textAlignment="center"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/menu_translate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

...
