...
            android:textColor="@color/colorNeoBlue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="English"/>

        <EditText
            android:id="@+id/et_translate_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_50dp"
            android:gravity="top"
            android:fontFamily="@font/roboto_regular"
            android:hint="Enter text here"
...
            app:layout_constraintTop_toBottomOf="@id/et_translate_source"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_baseline_mic_24"
            app:tint="@color/color_blue_purplish" />

        <ImageView
            android:id="@+id/img_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            app:layout_constraintTop_toBottomOf="@id/et_translate_source"
            app:layout_constraintEnd_toStartOf="@id/img_mic"
...
