...
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Korean"/>

        <EditText
            android:id="@+id/et_translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:fontFamily="@font/roboto_regular"
            android:hint="Terjemahan"
            android:textColorHint="@color/colorTextSecondary"
...
